--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,3 +5,4 @@ tasks:
 vscode:
   extensions:
     - vscjava.vscode-maven@0.21.2:tFEkt2FqLujaNTLU5AmRiQ==
+    - vscjava.vscode-java-test@0.27.0:gNh98vNbqtZC6ydHasFxAQ==
