--- a/ca-escola/pom.xml
+++ b/ca-escola/pom.xml
@@ -8,6 +8,30 @@
   <artifactId>ca-escola</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <dependencies>
+
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.7.0</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.7.0</version>
+        <scope>test</scope>
+    </dependency>
+
+
+    <dependency> 
+        <groupId>br.com.caelum.stella</groupId> 
+        <artifactId>caelum-stella-core</artifactId> 
+        <version>2.1.2</version> 
+    </dependency>
+  </dependencies>
+
+
   <build>
     <plugins>
         <plugin>
