--- a/ca-escola/pom.xml
+++ b/ca-escola/pom.xml
@@ -11,6 +11,12 @@
   <dependencies>
 
     <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+        <version>1.4.7</version>
+    </dependency>
+
+    <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
         <version>5.7.0</version>
